# agum

./: ChangeLog  Makefile  agum.cabal  readme.txt
src/Algebra/AbelianGroup/: IntLinEq.hs  Main.hs  UnificationMatching.hs
